Improved PathSelectField